--- a/anomally_detection_in_payroll.ipynb
+++ b/anomally_detection_in_payroll.ipynb
@@ -1090,7 +1090,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 10. Key Observation (Important for Viva)\n",
+        "# 10. Key Observation \n",
         "\n",
         "The perfect test accuracy is a result of synthetically generated anomalies with clear separation. In real-world datasets, performance is expected to be lower due to overlapping patterns, noise, and unknown anomaly distributions."
       ],
